--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h3><a href="./public/Movies.html"> Movie Ranking Project </a></h3>
     <img
       src="./assets/images/Movies.png"
-      height="250"
+      height="200"
       alt="Movie Ranking Project" />
 
     <h3>
-      <a href="./public/birthday-invite.html"> Birthday Invite Project </a>
+      <a href="./public/Birthday.html"> Birthday Invite Project </a>
     </h3>
     <img
       src="./assets/images/Birthday.png"
-      height="350"
+      height="300"
       alt="Birthday Invite Project" />
     <hr />
     <a href="./public/about.html"> About Me </a>
